# fishy-man2

./: .gitmodules
res/: world.ldtk
scripts/: build.sh  cmake_build.bat  cmake_build.sh
src/: CMakeLists.txt  animation.c  animation.h  camera.c  camera.h  entity.c  entity.h  game.c  game.h  main.c  world.c  world.h
src/entities/: bubble.c  bubble.h  bubble_spawner.c  bubble_spawner.h  checkpoint.c  checkpoint.h  doughnut.c  doughnut.h  fishyman.c  fishyman.h  fishyman_guts.c  fishyman_guts.h  ghost_shark.c  ghost_shark.h  shark.c  shark.h
