cmake_minimum_required(VERSION 3.23.2)
project(fishy-man2 VERSION 0.1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(SOURCES main.c cLDtk/cLDtk.c cLDtk/parson.c)
add_executable(fishy-man2 "${SOURCES}")

if(WIN32)
    find_package(raylib CONFIG REQUIRED)
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(raylib REQUIRED raylib)
endif()

target_link_libraries(fishy-man2 PRIVATE raylib)
